--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
+ .SignInForm Form {
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+ }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.menu {
+    background-color: tan;
+    display: flex;
+    justify-content: space-between;
+    height: 12vh;
+    width: 100vw;
+    margin-bottom: 50px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .menu Button {
+    margin: 1vh;
+    font-weight: bolder;
+    color: white;
+    background-color: black;
+    height: 40px;
+    size: lg;
   }
-  to {
-    transform: rotate(360deg);
+  
+  #tokenissue {
+    color: red;
+    font-size: 16px;
   }
-}
+  
+  .reviewcard {
+    border: 2px 2px  solid grey;
+    background: tan;
+    padding: 2rem;
+    margin: 3rem;
+    text-align: left;
+  }
+  .reviewcard .reviewbutton {
+    position: relative;
+    margin-left: 100px;
+    padding: 3rem;
+    width: 300px;
+  }
+  .current-module {
+    /* align-content: center;
+    margin: 0 auto; */
+    
+  }
+
+  
+  .jumbotron {
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .reviewButtonMenu {
+    display: flex;
+    justify-content: space-between;
+  }
